# todo-list

./: .env  .env.example  .gitignore  .mailmap  README.md  __init__.py  alembic.ini  autoclose_overdue.py  cli.py  cli_main.py  config.py  docker-compose.yml  main.py  poetry.toml  projects.json  pyproject.toml
alembic/: env.py
alembic/versions/: 2e1cb5d7c37a_make_tasks_description_nullable.py  30e1492dffa2_create_projects_tasks.py  9f65a7c9beb3_initial_schema.py  f10771079ff3_make_project_description_nullable.py  f5a1111c32f7_add_closed_at_to_tasks.py
legacy/: cli.py  in_memory_store.py  repositories.py
legacy/phase1_models/: project.py
models/: task.py
postman/: todo-list-api.postman_collection.json  todo-local.postman_environment.json
services/: project_service.py  task_service.py
src/todo_list/: __init__.py  cli.py  config.py  exceptions.py  main.py  project.py  project_manager.py  project_repository.py  task.py  task_manager.py  task_repository.py
tests/: conftest.py  test_full_project.py  test_name_index.py  test_phase1.py  test_project_manager.py  test_project_service.py  test_repository_pattern.py  test_smoke_services.py  test_task_manager.py  test_task_service.py
todo/: __init__.py  app_factory.py  cli.py  config.py
todo/api/: app.py  routers.py
todo/api/controller_schemas/: project_requests.py  project_responses.py  task_requests.py  task_responses.py
todo/api/controllers/: maintenance_controller.py  project_controller.py  task_controller.py
todo/commands/: autoclose_overdue.py  autoclose_overdue.py.bak  scheduler.py
todo/db/: base.py  session.py
todo/exceptions/: __init__.py  service_exceptions.py
todo/models/: project.py  task.py
todo/repositories/: __init__.py  project_repository.py  task_repository.py
todo/services/: app_factory.py  project_service.py  task_service.py
