[project]
name = "todo-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Nasim Koohestani",email = "nasimkoohestani82@gamil.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "todo_list", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
